clears text input when submit pressed, started adding some css

--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
             <h1>Cartoon Gifs Search</h1>
 
             <div id="button-list"></div>
-
+            <br />
+            <p>Click on one of the buttons above to see animated gifs.</p>
+            <hr />
             <form id="cartoon-form">
 
                 <label for="cartoon-input">Add a cartoon character to the list!</label>
@@ -32,7 +34,7 @@
                 <input type="submit" id="add-cartoon" value="Add Cartoon">
 
             </form>
-
+            <hr />
             <div id="cartoon-view"></div>
 
         </div>
