added more to cartoonArray, changed queryURL to https

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <hr />
             <form id="cartoon-form">
 
-                <label for="cartoon-input">Add a cartoon character to the list!</label>
+                <label for="cartoon-input">Add a cartoon title or character name to the list!</label>
                 <input type="text" id="cartoon-input">
                 <br />
                 <input type="submit" id="add-cartoon" value="Add Cartoon">
