added a dropdown menu for number of gifs to display

--- a/index.html
+++ b/index.html
@@ -25,6 +25,11 @@
             <div id="button-list"></div>
             <br />
             <p>Click on one of the buttons above to see animated gifs.</p>
+            <p>
+                Number of gifs to display: 
+                <select id='number-of-gifs' value="gif-number"></select>
+            </p>
+            
             <hr />
             <form id="cartoon-form">
 
@@ -35,6 +40,8 @@
 
             </form>
             <hr />
+            <p>Click on an image below to start/stop the animation.</p>
+            <br />
             <div id="cartoon-view"></div>
 
         </div>
